fixed links with z-index

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -266,6 +266,7 @@ a:hover {
   max-width: 315px;
   max-height: 280px;
   position: absolute;
+  z-index: 0;
   opacity: 1;
   transition: opacity .2s ease-in-out;
 }
@@ -278,6 +279,8 @@ a:hover {
   height: 280px;
   font-size: .75em;
   color: #000000;
+  position: absolute;
+  z-index: 5;
 }
 .thumbnail:hover {
   border: 1px solid #81dfe9;
